tests/terminate/neg/T745.hs

module T745 where

foo :: () -> ()
foo () = foo ()
